Attempt preventing scrolling on the home page on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -143,6 +143,7 @@ html, body {
     max-width: 100%;
     height: 100%;
     min-height: 100%;
+    max-height: 100%;
     overflow-x: hidden;
 }
 
